Fix line chart title too big.

--- a/scripts/day18.scss
+++ b/scripts/day18.scss
@@ -16,6 +16,7 @@
     }
   }
   h1 {
+    font-size: 1.5em;
     height: 100px;
   }
 }
